--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <resources>
 
     <string name="explore">探索</string>
@@ -7,15 +6,14 @@
     <string name="calendar">日历</string>
     <string name="message">消息</string>
     <string name="me">俺的</string>
-
     <string name="Fragment1">This is ActionBarSherlock Fragment 1</string>
     <string name="Fragment2">This is ActionBarSherlock Fragment 2</string>
     <string name="Fragment3">This is ActionBarSherlock Fragment 3</string>
-
     <string name="hello_world">Hello World</string>
     <string name="application_name">ActionBarSherlock Demos</string>
     <string name="app_name">SimaMeet</string>
     <string name="home_page">MainPage</string>
-
+    <string name="title_activity_blank">BlankActivity</string>
+    <string name="action_settings">Settings</string>
 
 </resources>
